Bug 248708 - Paragraph style removal when deleting or inserting a page break
Summary: Paragraph style removal when deleting or inserting a page break
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: Persona: Susan
Assignee: Thomas Zander
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2010-08-22 18:13 UTC by suse
Modified: 2010-11-07 15:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description suse 2010-08-22 18:13:32 UTC
Version:           2.2 (using KDE 4.5.0) 
OS:                Linux

Setting paragraph style for text next to a page break or inserting a page break next to it produces unexpected results.

Reproducible: Always

Steps to Reproduce:
Start a new document. Insert some text in the first line. Select and Set "Head 1" paragraph style. Go to beginning of line. Insert Page break. The text appears on the next page but is no longer "Head 1" formatted. If "Head 1" style is numbered the number stays on the old page.
Now selecting the text and setting "Head 1" again removes the page break.

Actual Results:  
Page break/formatting removal

Expected Results:  
No page break/formatting removal
Comment 1 Thomas Zander 2010-11-07 15:17:09 UTC
SVN commit 1193897 by zander:

Make inserting a page break work properly again

When inserting a page break at the front (and thus just moving
the parag down) make sure that we keep our style and numbering.
Also fix that re-applying a style removed the page breaking
flag and thus moved the text back up...

BUG:248708

 M  +10 -11    KoTextEditor.cpp  
 M  +0 -1      styles/KoParagraphStyle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1193897