Make inserting a page break work properly again

When inserting a page break at the front (and thus just moving
the parag down) make sure that we keep our style and numbering.
Also fix that re-applying a style removed the page breaking
flag and thus moved the text back up...

BUG:248708

svn path=/trunk/koffice/; revision=1193897